--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <nav><a href="./index.html">home</a></nav>
     <h1>Our Feline Friends</h1>
-    <p>Eventually we will put cat pictures here.</p>
+    <img src="Assets/bobcat2-317x240.jpg" />
     <footer><hr>Copyright (c) 2021 Contoso Cats</footer>
   </body>
 </html>
